<resources>
  <string-array name="home_tabs">
    <item>@string/playlists</item>
    <item>@string/albums</item>
    <item>@string/artists</item>
    <item>@string/songs</item>
  </string-array>
  <string name="app_name">Music Player</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="playlists">Playlists</string>
  <string name="albums">Albums</string>
  <string name="artists">Artists</string>
  <string name="songs">Songs</string>
  <string name="internal_storage">Phone</string>
  <string name="external_storage">SD Card</string>
  <string name="with_separator" formatted="false" translatable="false">%s - %s</string>
  <string name="all_songs">All songs</string>
  <string name="others">Others</string>
  <string name="song_count">%s songs</string>
  <string name="album_count">%s albums</string>
  <string name="play_all">Play all</string>
  <string name="random">Randomly</string>
  <string name="album_cover">Album cover image</string>
  <string name="edit_tags">Edit album tags</string>
  <string name="add_to_playlist">Add to playlist</string>
  <string name="shuffle_and_play">Shuffle and play all</string>
  <string name="play_after_current_song">Play after current song</string>
  <string name="play_after_current_playlist">Play after current playlist</string>
  <string name="more_menu">More menu</string>
  <string name="search">Search something</string>
  <string name="sort">Sort</string>
  <string name="album_detail_transition_name">album_detail_transition_name</string>
  <string name="album_transition_name">album_transition_name-%d</string>
  <string name="favorites">favorites</string>
  <string name="cannot_read_file">Cannot read file %s</string>
  <string name="empty_content">There are nothing here</string>
</resources>